--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -17,6 +17,7 @@ body{
 }
 .nav-link{
     color: #222222 !important;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 /* footer */
