--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -28,7 +28,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/listing">Explore</a>
+          <a class="nav-link" href="/listing">ExploreHub</a>
          
         </div>
 
@@ -41,7 +41,7 @@
         </div>
 
         <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="/listing/new">Airbnb your home</a>
+          <a class="nav-link" href="/listing/new">Add destination</a>
           <%if(!currUser){%>
             <a class="nav-link " aria-current="page" href="/signup"><b>signup</b></a>
             <a class="nav-link" href="/login"><b>Login</b></a>
