--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -82,7 +82,7 @@ body{
 }
 
 .add-btn{
-    background-color: #fe424d !important;
+    background-color: #2d28c2 !important;
     border: none !important;
 }
 
