--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
   </style>
 
   <body>
-    <div id="filters">
+    <!-- <div id="filters">
 
       <div class="filters">
         <div><i class="fa-solid fa-fire"></i></div>
@@ -92,7 +92,7 @@
           <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-Sm-1 mt-2 maincard">
       <%for(let lis of listing) { %>
