--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <% layout("/layout/boilerplate")%>
 
     <div class="row mt-3">
-        <h1 class="col-6 offset-3">Login on Wanderlust</h1>
+        <h1 class="col-6 offset-3">Login on ExploreHub</h1>
         <div class="col-6 offset-3">
             <form action="/login" method="post" class="needs-validation" novalidate>
 
