--- a/views/new.ejs
+++ b/views/new.ejs
@@ -29,7 +29,7 @@
 
     <div class="row">
     <div class="mb-3 col-md-4">
-        <label for="price" class="form-lable">price</label>
+        <label for="price" class="form-lable">Ticket</label>
         <input type="number" name="listing[price]"class="form-control" required >
         <div class="valid-feedback">price must greter than 0</div>
         <div class="invalid-feedback">plese enter price</div>
