--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,7 @@
 <% layout("/layout/boilerplate")%>
 
 <div class="row mt-3">
-    <h1 class="col-6 offset-3">SignUp on Wanderlust</h1>
+    <h1 class="col-6 offset-3">SignUp on ExploreHub</h1>
     <div class="col-6 offset-3">
         <form action="/signup" method="post" class="needs-validation" novalidate>
 
